p text align fix

--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,7 @@ h4{
 .Info_Passenger{
   background: lightgrey;
 }
+
+p{
+  text-align: center;
+}
